--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -5,7 +5,7 @@
 }
 
 .input {
-  @apply focus:outline-none focus:border-gray-500 px-4 py-3 m-0.5 text-gray-500 border-2  text-lg border-gray-200 transition-colors;
+  @apply focus:outline-none focus:border-gray-500 p-3 text-gray-500 border-2  text-lg border-gray-200 transition-colors;
 }
 
 @tailwind utilities;
